--- a/demo/Makefile
+++ b/demo/Makefile
@@ -1,10 +1,10 @@
 # Makefile for server
-
+int main
 CC = gcc
 CFLAGS = -Wall -g 
 LDFLAGS = -pthread
 
-all: server
+all: server;
 
 server: server.c server.h
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $<
